# src/main/java/com/safenetpay/department/controller/WebVerticle.java
@@ -1,7 +1,8 @@
 package com.safenetpay.department.controller;
 
 import com.safenetpay.department.dao.DataBaseVerticle;
-import com.safenetpay.department.dao.Repository;
+
+import org.apache.log4j.Logger;
 
 import io.netty.handler.codec.http.HttpHeaderValues;
 import io.vertx.core.AbstractVerticle;
@@ -12,22 +13,39 @@ import io.vertx.core.http.HttpServer;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.Router;
 import io.vertx.ext.web.RoutingContext;
+import io.vertx.ext.web.handler.BodyHandler;
 import io.vertx.ext.web.handler.StaticHandler;
+import io.vertx.ext.web.openapi.RouterBuilder;
 
 public class WebVerticle extends AbstractVerticle {
 
-  private final Repository repository = new DataBaseVerticle();
+  private static final Logger LOGGER = Logger.getLogger(WebVerticle.class);
 
-    @Override
-    public void start(Promise<Void> startPromise) throws Exception {
-        configureRouter()
-        .compose(this::startHTTPServer)
-        .onComplete(startPromise::handle);
-    }
- 
-  private Future<Router> configureRouter() {
+  @Override
+  public void start(Promise<Void> startPromise) throws Exception {
+    configureRouterBuilder()
+    .compose(this::configureRouter)
+    .compose(this::startHTTPServer)
+    .onComplete(startPromise::handle);
+  }
+
+  private Future<RouterBuilder> configureRouterBuilder() {
+    Promise<RouterBuilder> promise = Promise.promise();
+    RouterBuilder.create(vertx, "src/main/resources/webroot/swagger/swagger.yaml", ar -> {
+      if (ar.succeeded()) {
+        LOGGER.info("RouterBuilder is confugured");
+        promise.complete(ar.result());
+      } else {
+        LOGGER.error(ar.cause());
+      }
+    });
+    return promise.future();
+  }
+
+  private Future<Router> configureRouter(RouterBuilder routerBuilder) {
     Promise<Router> promise = Promise.<Router>promise();
-    Router router = Router.router(vertx);
+    Router router = routerBuilder.createRouter();
+    router.route().handler(BodyHandler.create());
     router.route("/*").handler(StaticHandler.create());
     router.get("/api/employee/list").handler(this::getEmployees);
     router.post("/api/employee").handler(this::saveEmployee);
@@ -50,15 +68,28 @@ public class WebVerticle extends AbstractVerticle {
   }
 
   private void getTask(RoutingContext rc) {
+    vertx.eventBus().request("get_tasks", "", reply -> {
+      rc.response().putHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON)
+          .putHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, "*").end(reply.result().body().toString());
+    });
   }
 
   private void updateDepartment(RoutingContext rc) {
   }
 
   private void saveDepartment(RoutingContext rc) {
+    vertx.eventBus().request("save_departments", rc.getBodyAsJson(), reply -> {
+      LOGGER.info("Request is handle to save department");
+      rc.response().putHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON)
+          .putHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, "*").end(reply.result().body().toString());
+    });
   }
 
   private void getDepartment(RoutingContext rc) {
+    vertx.eventBus().request("get_departments", "", reply -> {
+      rc.response().putHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON)
+          .putHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, "*").end(reply.result().body().toString());
+    });
   }
 
   private void updateEmployee(RoutingContext rc) {
@@ -66,12 +97,14 @@ public class WebVerticle extends AbstractVerticle {
   }
 
   private void getEmployees(RoutingContext rc) {
-    rc.response().putHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON)
-    .end(repository.)
+    vertx.eventBus().request("get_employees", "", reply -> {
+      rc.response().putHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON)
+          .putHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, "*").end(reply.result().body().toString());
+    });
   }
 
   private void saveEmployee(RoutingContext rc) {
-    
+
   }
 
   private Future<Void> startHTTPServer(Router router) {
@@ -80,10 +113,8 @@ public class WebVerticle extends AbstractVerticle {
     int port = http.getInteger("port");
     String hostName = http.getString("host");
 
-    HttpServer server = vertx
-    .createHttpServer()
-    .requestHandler(router);
-  
-    return Future.<HttpServer>future(promise -> server.listen(port,hostName,promise)).mapEmpty();
+    HttpServer server = vertx.createHttpServer().requestHandler(router);
+
+    return Future.<HttpServer>future(promise -> server.listen(port, hostName, promise)).mapEmpty();
   }
 }
